feat: 텍스트 색상 기본 팔레트 및 사용자 지정 팔레트 팝업 생성 및 적용

--- a/src/index.css
+++ b/src/index.css
@@ -132,3 +132,28 @@
     @apply bg-background text-foreground;
   }
 }
+
+button {
+  cursor: pointer;
+}
+
+.rcp-root.rcp {
+  padding: 10px;
+  background: white;
+}
+
+.rcp-alpha {
+  display: none;
+}
+
+.rcp-body {
+  background: white;
+}
+
+#hex {
+  color: black;
+}
+
+.rcp-field label {
+  display: none;
+}
